# lucid-agent-core

./: .env.example  .gitignore  CODE_STRUCTURE.md  ISSUES.md  Makefile  README.md  config.py  env.example  main.py  mqtt_client.py  pyproject.toml  pytest.ini  requirements.txt  verify_v1_contract.py
.claude/: settings.local.json
docs/: DEPLOYMENT_MODES.md  FILE_CHANGES.md  FINAL_REPORT.md  HOME_LUCID_REFACTOR.md  IMPLEMENTATION_SUMMARY.md  LOCAL_WHEEL_FEATURE.md  LOCAL_WHEEL_SMOKE_TESTS.md  MIGRATION_V1.md  RELEASE_USAGE.md  SMOKE_TESTS.md  VERIFICATION_CHECKLIST.md  ubuntu-20.04-manual-install.md
src/: __init__.py  config.py  main.py  mqtt_client.py  mqtt_topics.py
src/lucid_agent_core/: __init__.py  config.py  env.example  installer.py  main.py  mqtt_client.py  mqtt_topics.py  paths.py
src/lucid_agent_core/components/: base.py  context.py  dummy.py  loader.py  registry.py
src/lucid_agent_core/core/: __init__.py  cmd_context.py  component_installer.py  component_uninstaller.py  component_upgrader.py  config_store.py  core_upgrader.py  handlers.py  log_config.py  mqtt_log_handler.py  restart.py  snapshots.py
src/lucid_agent_core/launchd/: com.lucid.agent-core.plist
src/lucid_agent_core/mqtt/: __init__.py  client.py  (+4 more)
tests/: __init__.py  conftest.py
tests/unit/: test_component_installer.py  test_config.py  test_config_store_scoped.py  test_dedup.py  test_installer.py  test_lifecycle_commands.py  test_loader.py  test_main.py  test_mqtt_client.py  test_mqtt_log_handler.py  test_mqtt_topics.py  test_paths.py  test_registry.py  test_status_consistency.py
(+25 files in other folders)
